--- a/ActivateBuildOrderPane/ActivateBuildOrderPane.csproj
+++ b/ActivateBuildOrderPane/ActivateBuildOrderPane.csproj
@@ -63,13 +63,15 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="toolbar_new_button.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <VSCTCompile Include="ActivateBuildOrderPane.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
-    <Content Include="index.html" />
     <Content Include="Resources\ActivateBuildOrderPane.ico" />
-    <Content Include="Resources\ActivateBuildOrderPaneCommand.png" />
-    <Content Include="stylesheet.css" />
+    <Content Include="Resources\ActivateBuildOrderPaneCmd.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
